# MNISTNeuralNetwork

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FindOpenCV.cmake  main.cpp
include/neural/: Matrix.h  Network.h
src/: Network.cpp
